--- a/StdDraw.cabal
+++ b/StdDraw.cabal
@@ -17,6 +17,6 @@ executable StdDraw
   main-is:              Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:        base >= 4.7 && < 5, data-default, mtl, GLFW-b, OpenGL, stm
+  build-depends:        base >= 4.7 && < 5, data-default, mtl, GLFW-b, OpenGL, stm, random
   hs-source-dirs:       src
   default-language:     Haskell2010
